<resources>
    <string name="app_name" translatable="false">TaxiApp</string>
    <string name="location_permission">Location Permission</string>
    <string name="explanation_location_permission">In order to offer the best map navigation service, we need access to the location of this device.</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="go_back">Go Back</string>
    <string name="required_field">This field is required!</string>
    <string name="invalid_email">Invalid E-Mail Address</string>
    <string name="user_not_found">User not found!</string>
    <string name="google_user">This account uses Google Sign In</string>
    <string name="main_map_title">Taxis on the map</string>
    <string name="main_driver_title">Search a driver</string>
    <string name="main_call_center_title">Call Center</string>
    <string name="main_profile_title">My Profile</string>
    <string name="main_map_description">Here you find the vehicles that circulate in the city.</string>
    <string name="main_menu_description">Here we offer you multiple options so you can find a taxi quickly.</string>
    <string name="logout">Logout</string>
    <string name="available_drivers">Available Drivers</string>
    <string name="search_driver">Search driver</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="select_another_photo">Select another photo</string>
</resources>